--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mysql2": "^3.15.0",
-    "nodemon": "^3.1.10"
-  }
+    "mysql2": "^3.14.5"
+  },
+  "devDependencies": {},
+  "description": ""
 }
